<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ac_driver</name>
  <version>1.0.0</version>
  <description>The ac_driver package</description>
  <maintainer email="skyler.zhao@robosense.cn">sti</maintainer>
  <license>BSD</license>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>

  <depend>sensor_msgs</depend>
  <depend>robosense_msgs</depend>
  <depend>std_msgs</depend>

  <export>
     <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
  </export>
</package>
