<?xml version="1.0"?>
<package format="3">
  <name>robosense_msgs</name>
  <version>0.0.0</version>
  <description>ROS 1 message definitions for RoboSense sensors</description>
  <maintainer email="swhe@robosense.cn">sti</maintainer>
  <license>Apache 2.0</license>

  <!-- ROS 1 核心依赖 -->
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- 消息生成依赖 -->
  <build_depend>message_generation</build_depend>
  <depend>std_msgs</depend>
  <!-- 运行时依赖 -->
  <exec_depend>message_runtime</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>